--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js json-server --watch db.json --port 5000",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -31,6 +31,7 @@
     "enhanced-resolve": "^5.8.2",
     "express": "^4.17.1",
     "json-server": "^0.16.3",
+    "ngx-material-timepicker": "^5.5.3",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
